# blockchain-assisted-green-mrv-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml  tree.txt
examples/: demo_train.py  tiny_train.py  train_dummy_model.py
src/greenmrv/: __init__.py  blockchain_ganache.py  codecarbon_csv.py  core.py  framework.py  hardware.py  integrity.py  schema.py  verify_streamlit.py
src/greenmrv/ganache_chain/: MRVRegistry.sol  deploy_and_register.py
